Se continuo con la parte 1 de la unidad 3

--- a/4º Año/Metodología de Sistemas II/Unidad 3/1. Introducción a UML.md
+++ b/4º Año/Metodología de Sistemas II/Unidad 3/1. Introducción a UML.md
@@ -36,4 +36,131 @@ Todo sistema puede describirse desde dos puntos de vista:
 
 ### Introducción a UML
 
-Lenguaje escrito por: 
+Lenguaje escrito por: Grady Booch, Ivar Jacobson, James Rumbaugh.
+Basado en las experiencias de los autores.
+Actualmente es un estándar y pertenece a la OMG (Object Managemente Group).
+Ultima Versión: 2.0 y la 2.1 es Beta.
+
+#### ¿Qué es UML?
+
+Es una herramienta o Lenguaje de Modelamiento Unificado que permite a los creadores de Sistemas generar diseños que capturen sus ideas en una forma convencional y fácil de comprender y así poder comunicárselas a otras personas.
+
+• UML define una notación que se expresa como diagramas que sirven para representar modelos/subsistemas o partes de ellos. 
+• UML es un lenguaje de propósito general para el modelado orientado a objetos.
+• Define una estructura para ir del análisis al diseño y de éste a la implementación.
+
+"UML es un lenguaje visual para especificar, construir y documentar sistemas”
+
+• Unified (UNIFICADO): 
+	• El aporte de muchos métodos y notaciones. 
+	• Independiente de implementaciones, plataformas y lenguajes.
+
+• Modeling (MODELADO): 
+	• Los modelos son utilizados en todas las ingenierías.
+
+• Language (LENGUAJE): 
+	• Si hay gente, requieren comunicarse. Si se tienen que comunicar, se tienen que entender. Para entenderse necesitan un lenguaje común.
+
+¡UML no es Metodología!
+
+#### Estructura del UML
+
+• 5 vistas
+• 9 diagramas 
+
+![[vistas_uml.png]]
+
+#### Diagramas de UML
+
+• Los diagramas expresan gráficamente partes de un modelo.
+
+![[diagramas_uml.png]]
+
+• La finalidad de los Diagramas es presentar diversas perspectiva de un Sistema, a los cuales se le conoce como MODELO.
+• El Modelo UML de un Sistema es similar a un Modelo de Escala de un Edificio. 
+• Es importante destacar que el Modelo UML describe lo que supuestamente hará un Sistema, pero no dice como implementar dicho sistema.
+
+#### ¿Por qué tantos diagramas?
+
+• Los Diagramas UML permite examinar un Sistema desde distintos puntos de vista. 
+• En necesario contar con diferentes perspectiva en un Sistema por que se cuenta con diferentes personas implicadas, los cuales tienen enfoque particulares en diferentes aspectos del Sistema. 
+• El Objetivo es satisfacer a cada Persona involucrada.
+• Cabe recalcar que en UML no es necesario que aparezcan todos los Diagramas.
+
+#### Clases y objetos
+
+**Clase:**
+	Concepto: Una clase es la abstracción de las propiedades y operaciones o acciones que ejecutan los objetos del mundo real. (La CLASE es como si fuera una plantilla que sirve para crear los objetos)
+
+**Objeto:**
+	Concepto: Los objetos son instancias de una clase. (Las unidades que existen en el mundo real de una clase específica.)
+
+• Cada objeto tiene valores propios para cada una de las características de la Clase.
+
+• Los objetos que existen en el mundo real pueden ser conceptuales o físicos. Este es un ejemplo de objetos físicos.
+
+• Los objetos conceptuales existen en el mundo real pero no son tangibles.
+
+• Las clases no solo tienen características, también tienen servicios. (Acciones que se pueden realizar sobre los objetos de la clase)
+
+**Recordemos nuestro proceso para desarrollar una aplicación de software:**
+
+![[proceso_desarrollo.png]]
+
+**Ej.**: 
+
+1. Identificamos los requerimientos de la aplicación (para este ejercicio, se identifican los requerimientos funcionales) 
+2. Elaboramos el diagrama de casos de uso
+3. Especificamos los requerimientos (Hasta este paso hemos identificado el dominio del problema)
+4. Identificamos las entidades involucradas en el mundo del problema (vida real) y sus características.
+![[entidades_caracteristicas.png]]
+
+Los tipos de datos hacen referencia a la clase de valores que pueden tener las características.
+
+Nos detendremos un momento en recordar los tipos de datos:
+	• **Cadena de caracteres** ( por lo general se representan entre comillas dobles).
+	• **Carácter** (se representan en programación con comilla sencilla) .
+	• **Entero** 
+	• **Real** 
+	• **Lógico** 
+
+5. A partir de las entidades identificamos las clases y sus atributos.
+	• Las entidades del mundo real se convierten en clases en el mundo de la programación, de la misma manera las características se llaman atributos y los servicios se llaman métodos.
+ 
+ • Una vez identificadas las clases, se modela la solución de la aplicación utilizando el DIAGRAMA DE CLASES de UML.
+ 
+ • En el diagrama de clases se dibuja una caja por cada clase, recordando que la clase tiene los siguientes componentes: Nombre, Atributos, Métodos. 
+ 
+ • Las clases tienen relaciones con otras clases y estas relaciones también se incluyen en el diagrama de clases.
+
+• Por ahora veremos la relación de ASOCIACIÓN, aunque existen más tipos de relaciones (las estudiaremos más adelante, cuando avancemos en el curso).
+
+Relación de asociación: Se representa con una flecha. Cada objeto de la Clase A conoce un objeto de la Clase B, pero no lo contrario.
+
+**Retomando nuestro proceso para desarrollar una aplicación de software:**
+    Con el diagrama de clases elaborado, cumplimos con la etapa de Modelo de diseño UML.
+
+### Paquetes
+
+Es la manera en que UML organiza un diagrama de elementos. También sirve para la organización de un Modelo de Sistema/Subsistemas agrupando elementos del Modelo. 
+Los modelos contienen múltiples clases y pueden estar agrupadas en paquetes.
+
+En las primeras fases del desarrollo del sistema es posible utilizar los paquetes para los siguientes objetivos:
+- Tener una vista del sistema sin mucho detalle. 
+- Tener vistas de pequeñas porciones del sistema. 
+- Crear pequeñas porciones del sistema que pueden trabajar independientemente. 
+- Existe una dependencia entre paquetes cuando por lo menos una clase de un paquete depende de una clase dentro de un segundo paquete.
+
+Cuando existe dependencia cíclica entre paquetes, es recomendable dividir los paquetes por funcionalidad, para romper estas dependencias cíclicas.
+
+Ej.: Si la Clase Lavadora pertenece al Paquete llamado Electrodoméstico, su representación seria:
+![[ejemplo_paquetes.png]]
+
+### Relaciones
+
+Una relación es una conexión entre elementos.
+
+Las tres relaciones más importantes son: 
+	• Dependencia 
+	• Generalización 
+	• Asociaciones
