Se termino la parte 1 y se empezo con la parte 2 de la unidad 3

--- a/4º Año/Metodología de Sistemas II/Unidad 3/1. Introducción a UML.md
+++ b/4º Año/Metodología de Sistemas II/Unidad 3/1. Introducción a UML.md
@@ -164,3 +164,96 @@ Las tres relaciones más importantes son:
 	• Dependencia 
 	• Generalización 
 	• Asociaciones
+
+#### Dependencia
+
+- Una relación de dependencia significa que una clase es dependiente de otra por algún servicio. 
+- Una relación de dependencia se indica si: 
+	- Las operaciones de la clase cliente crean objetos de la clase proveedora. 
+	- Las operaciones de la clase cliente pasan argumentos a las instancias de la clase proveedora.
+- Ej.:	![[relacion_dependencia.png]]
+
+#### Generalizacion
+
+- La Herencia y Generalización es lo mismo. 
+- Como se dijo anteriormente, es uno de los aspectos mas importante que cuenta la OOP. 
+- Es cuando una SubClase o Clase Secundaria puede heredar los Atributos y Métodos de otra Clase (Clase Principal o SuperClase).
+- Ej.: ![[relacion_dependencia.png]]
+
+#### Asociación 
+![[relacion_asociacion.png]]
+
+#### Agregación
+
+- Es una estrecha relación que existen entre varios Objetos. 
+- En un Objeto que se conforma de una combinación de diversos tipos de objetos. 
+- Una Clase consta de otra.
+![[relacion_agregacion.png]]
+
+### Restricciones en las asociaciones 
+
+- En Asociaciones entre Clases pueden existir ciertas reglas. 
+- Se establece una Restricción en una Asociación. En este caso, la Asociación “Atiende“ está restringida para que el Cajero atienda al Cliente en turno. 
+![[restriccion_asociacion.png]]
+
+- Otro tipo de Restricción es la relación O (distinguida como {Or}) en una línea discontinua que conecte a dos líneas de Asociación. 
+- La siguiente figura modela a un Estudiante que elegirá entre un Curso Académico o Comercial.
+![[restriccion_or.png]]
+
+### Clase de asociación
+
+- Una Asociación igual que una Clase, puede contener Atributos y Métodos. Esto se llama Clase de Asociación. 
+- Una Clase de Asociación puede tener asociaciones con otras Clases.
+![[clases_asociacion.png]]
+
+### Vínculos
+
+Así como un Objeto es una Instancia de una Clase, una Asociación también se puede instanciar.
+![[vinculos.png]]
+
+### Multiplicidad
+- Es un aspecto importante en las Asociaciones entre Objetos. 
+- Indica la cantidad de Objetos de una Clase que se relacionan con otro Objeto particular de la Clase Asociada. 
+- Las Multiplicidad pueden ser: 1 a 1, 1 a muchos, 1 a 5, etc.
+![[multiplicidad.png]]
+
+![[tipos_multiplicidad.png]]
+
+### Asociaciones calificadas
+
+- Cuando la Multiplicidad es de Uno a Muchos, se presenta un reto importante, La Búsqueda. 
+- Cuando un Objeto de una Clase tiene que seleccionar un Objeto en particular de otro tipo para cumplir con un papel en la Asociación, la primera Clase deberá atenerse a un atributo en particular para localizar al Objeto adecuado. 
+- El Atributo identificador se conoce como Calificador. 
+- Ej.: ![[asociacion_calificada.png]]
+
+### Asociaciones reflexivas
+
+- Es una Relación consigo mismo. 
+- Esto ocurre cuando una Clase tiene Objetos que pueden jugar diversos papeles. 
+- Ej.: ![[asociacion_reflexiva.png]]
+
+### Diagrama de contexto
+
+- El Diagrama de Contexto es como el mapa detallado de alguna sección de un mapa de mayores dimensiones. 
+- Pueden ser necesarias varias secciones para capturar toda la información.
+- Cuando se modele un Sistema puede producirse, con frecuencia, agrupamiento de Clases, como Agregaciones o Composiciones.
+- Ej.: ![[diagrama_contexto.png]]
+
+### Interfaces 
+
+- Es un conjunto de operaciones (Métodos) que especifica cierto aspecto de la funcionalidad de una Clase, y es un conjunto de operaciones (Métodos) que una Clase presenta a otras. 
+- Recurso de diseño soportado por los lenguajes orientados a objetos que permite definir comportamiento. 
+- Permite que clases que no están estrechamente relacionadas entre sí deban tener el mismo comportamiento.
+- La implementación de una interfaz es un contrato que obliga a la clase a implementar todos los métodos definidos en la interfaz. 
+- Una vez que se hayan creado varias Clases, tal vez se de cuenta que no pertenecen a una Clase Principal, pero en su comportamiento debe incluir algunas de las mismas operaciones con las mismas firmas de la primera Clase.
+![[interfaces.png]]
+¿De que clase heredaría la clase Hidroavión? 
+
+- Se crean las interfaces que definen comportamiento 
+- Hidroavión deberá definir los comportamientos de cada una de las interfaces que implemente.
+![[interfaces_dos.png]]
+
+### Ejemplo UML
+
+![[ejemplo_UML.png]]
+
