Se continuo con la parte 2 de la unidad 3

--- a/4º Año/Metodología de Sistemas II/Unidad 3/2. Diagramas UML.md
+++ b/4º Año/Metodología de Sistemas II/Unidad 3/2. Diagramas UML.md
@@ -1,2 +1,168 @@
 
 ### Introducción
+Un diagrama es una presentación gráfica de un conjunto de elementos, donde la mayoría de las veces se dibuja como un grafo conexo de nodos (elementos) y arcos (relaciones). 
+
+Los diagramas se utilizan para visualizar un sistema desde diferentes perspectivas.
+
+En UML se utilizan cinco vistas para visualizar, especificar, construir y documentar una arquitectura de software: 
+	• **Vista del Usuario** 
+		 • Casos de usos. 
+	 • **Vista de Comportamiento** 
+		 • Diagrama de actividades. 
+		 • Diagrama de secuencias. 
+		 • Diagrama de colaboraciones. 
+		 • Diagrama de estado.
+	 • **Vista estructural** 
+		 • Diagrama de clases. 
+		 • Diagrama de objetos. 
+	 • **Vista implementación** 
+		 • Diagrama de componentes. 
+	 • **Vista ambiente** 
+		 • Diagrama de despliegue o distribución.
+
+![[diagramas_calificacion.png]]
+
+### Casos de uso
+
+![[casos_uso_vista.png]]
+
+- Los Casos de Uso es una técnica para capturar información de cómo un sistema o negocio trabaja, o de cómo se desea que trabaje. 
+- Ayuda a obtener requerimientos desde el punto de vista del Usuario (actor), modelando la funcionalidad del sistema. 
+- No pertenece estrictamente al enfoque orientado a objeto, es una técnica para captura de requisitos. 
+- Es el poderoso concepto que ayuda al analista a comprender la forma en que un Sistema deberá comportarse. 
+
+#### Elementos de los casos de uso
+
+- **Actor:** 
+	- rol que juega un usuario con respecto al sistema. 
+	- un Actor no necesariamente representa a una persona en particular, sino más bien la labor que realiza frente al sistema.
+	![[actor.png]]
+
+- **Caso de Uso:** 
+	- Operación o tarea específica que se realiza tras una orden de algún agente externo, originada por una petición de un actor o bien desde la invocación desde otro caso de uso. 
+	![[caso_uso.png]]
+
+#### ¿Cómo se conectan actores y casos de uso?
+
+Por medio de relaciones
+Son:
+- Asociación. 
+- Inclusión. 
+- Extensión. 
+- Generalización.
+
+#### Relaciones de los Casos de Uso
+
+**Asociaciones:** Es el tipo de relación más básica que indica la invocación desde un actor o caso de uso a otra operación (caso de uso).
+![[caso_uso_asociacion.png]]
+
+**Dependencia o Instanciación:** Es una forma muy particular de relación entre clases, en la cual una clase depende de otra, es decir, se instancia (se crea).
+![[caso_uso_dependencia.png]]
+
+**Inclusión (include):** Volver a utilizar los pasos de un Caso de Uso dentro de otro. Permite factorizar un comportamiento en un caso de uso aparte y evitar repetir un mismo flujo en diferentes casos de uso. Incluye la funcionalidad de un Caso de Uso en otro. 
+Un caso de uso base incorpora explícitamente el comportamiento de otro en algún lugar de su secuencia. 
+![[inclusion_caso_uso.png]]
+
+**Extensión (extend):** Un caso de uso base incorpora implícitamente el comportamiento de otro caso de uso en el lugar especificado indirectamente por este otro caso de uso. 
+Extiende la funcionalidad de un Caso de Uso a otro bajo unas condiciones.
+![[caso_uso_extension.png]]
+
+**Generalización:** Las Clase se pueden heredar entre si, de igual forma sucede con los Casos de Uso. El Caso de Uso secundario hereda las acciones y significados del Primario, y además agrega sus propias acciones. 
+![[caso_uso_generalizacion1.png]]
+![[caso_uso_generalizacion2.png]]
+![[caso_uso_generalizacion3.png]]
+
+- Se diferencian por el estereotipo uses (uso) o (extends) (herencia). 
+- extends: Se recomienda utilizar cuando un caso de uso es similar a otro (en sus características). 
+- uses: Se recomienda utilizar cuando se tiene un conjunto de características que son similares en más de un caso de uso y no se desea mantener copiada la descripción de la característica. 
+
+Ej.: ![[caso_uso_ejemplo.png]]
+
+#### Agrupamiento
+Cuando un Sistema consta de varios Sub-Sistemas, o cuando se realiza toma de requerimientos a varios usuarios, necesitamos organizar los Casos de uso por Categorías o Tipos de Sistemas, la mejor forma de organizarlo son con los Paquetes. 
+![[caso_uso_paquete.png]]
+
+#### Utilidad
+
+Modelar el comportamiento de un elemento (sistema, subsistema, clase): 
+	**Centrarse en qué hace el elemento, NO en cómo lo hace.** 
+
+1º) Sirven para intercambiar opiniones los expertos del dominio, los usuarios finales y los desarrolladores. 
+	– Los expertos del dominio especifican su vista externa para que los desarrolladores construyan su vista interna.
+
+2º) El creador del elemento comunica cómo se debería usar. El elemento puede ser complejo y tener muchas operaciones. 
+
+3º) Sirven de base para probar el sistema una vez implementado. 
+
+#### Desarrollo
+
+Pasos a seguir: 
+- Identificar los actores que interactúan con el elemento. 
+- Organizar los actores (roles generales, roles especializados, …). 
+- Considerar las formas más importantes que tiene cada actor de interactuar con el elemento. 
+- Considerar las formas excepcionales que tiene cada actor de interactuar con el elemento. 
+- Organizar estos comportamientos utilizando las relaciones entre casos de uso vistas. 
+- Especificar cada caso de uso con texto y trazas de eventos. 
+
+#### Sugerencias
+
+Sugerencias y consejos: 
+- Cada caso de uso debe representar un comportamiento distinto e identificable del sistema (razonablemente atómico). 
+- Factorizar el comportamiento común: include. 
+- Factorizar las variantes de comportamiento: extends. 
+- Describir el flujo de eventos de manera suficientemente clara para que alguien externo lo entienda. 
+- Mostrar sólo los importantes para comprender el comportamiento del sistema. 
+- Mostrar sólo los actores implicados.
+
+#### ¿Cómo se documenta un caso de uso?
+
+Especificación del requerimiento (funcional)
+![[especificacion_requerimiento.png]]
+Esta es una plantilla general de documentación de casos de uso (requerimientos), tienen más ítems que permiten detallar cada caso de uso. 
+
+### Diagrama de actividades
+
+![[actividades_vista.png]]
+
+- Diagrama de flujo que describe el orden de las actividades de un proceso. 
+- Describen las actividades que ocurren dentro de un Caso de Uso. 
+- Ha sido diseñado para mostrar una visión dinámica simplificada de lo que ocurre dentro de un proceso u operación. 
+- Este diagrama es una Extensión del Diagrama de Estado.
+
+#### Elementos del Diagrama de Actividades
+
+![[elementos_diagrama_actividades.png]]
+
+#### Decisiones en el Diagrama de Actividades
+
+- Casi siempre en un Diagrama de Actividades se llegará a un punto donde se realizará alguna decisión, donde una lo llevará por un camino y otra por otro camino. 
+- Existen dos formas de representar los puntos de decisión: 
+	- La primera es mostrar las rutas posibles que parten directamente una actividad. 
+	- La segunda es llevar la transición hacia un rombo. 
+- Ej.:
+![[actividades_ejemplo.png]]
+
+#### Rutas Concurrentes en el Diagrama de Actividades
+
+Conforme como se modele las actividades, se tendrá la oportunidad de separar la transición en dos rutas que se ejecutan al mismo tiempo (en forma concurrente) y luego se reúna.
+![[rutas_concurrentes_actividades.png]]
+
+#### Indicaciones en el Diagrama de Actividades
+
+- También es posible enviar una indicación. Cuando se reciba, la indicación provocara que se ejecute una actividad. 
+- El símbolo para enviar la indicación es un pentágono convexo y el que recibe un pentágono cóncavo.
+- Ej.:
+![[indicaciones_actividades.png]]
+
+#### Ejemplo de diagrama de actividades
+
+Proceso de una Aerolínea con marcos de Responsabilidades 
+![[ejemplo_diagrama_actividades.png]]
+
+### Diagrama de Secuencias
+
+![[diagrama_secuencias_vista.png]]
+Es un diagrama de interacción que muestra como se comunican los objetos entre si al transcurrir el tiempo.
+![[elementos_secuencias.png]]
+![[elementos_secuencias_UML.png]]
+![[objeto_secuencias.png]]
