--- a/4º Año/Metodología de Sistemas II/Unidad 3/2. Diagramas UML.md
+++ b/4º Año/Metodología de Sistemas II/Unidad 3/2. Diagramas UML.md
@@ -162,7 +162,145 @@ Proceso de una Aerolínea con marcos de Responsabilidades
 ### Diagrama de Secuencias
 
 ![[diagrama_secuencias_vista.png]]
+
 Es un diagrama de interacción que muestra como se comunican los objetos entre si al transcurrir el tiempo.
+
 ![[elementos_secuencias.png]]
 ![[elementos_secuencias_UML.png]]
 ![[objeto_secuencias.png]]
+
+- Los estímulos (Mensajes) es la comunicación existente entre un Objeto a otro. 
+Los estímulos pueden ser: 
+	**Simple:** es la transferencia normal del control entre un Objeto a otro. **Sincrónico:** Es la espera la respuesta de un mensaje antes de continuar con su trabajo. 
+	**Asincrónico:** no espera respuesta de un mensaje para continuar con su trabajo. 
+	![[mensajes_actividades.png]]
+
+- El Tiempo representa la duración de la ejecución de un mensaje. 
+- Se representa con una barra vertical. 
+- Puede mostrar los Estados de un Objeto. 
+- En ocasiones un objeto cuenta con una operación que se invoca así misma, esto se llama “Recursividad”. 
+- Ej.: ![[ejemplo_secuencias.png]]
+La dimensión horizontal es la disposición de los objetos y la dimensión vertical muestra el paso del tiempo. 
+
+### Diagrama de colaboracion
+![[vista_diagrama_colaboracion.png]]
+
+- Este diagrama es similar al Diagrama de Secuencia, pero de una mirada diferente. 
+- Es la forma de cómo los Objetos se colaboran entre si, tal como se muestra en el Diagrama de Secuencia. 
+- Destaca la organización de los Objetos que participan en una interacción y sus relaciones. 
+- Cuenta con dos características que lo diferencia del Diagrama de Secuencia:
+	- El Camino: Indica como se enlaza entre un Objeto a otro. 
+	- Numero de Secuencia: Indica la ordenación temporal de un mensaje, se precede de un número y que incrementa secuencialmente por cada nuevo mensaje en el flujo de control. También se cuenta la representación por anidamiento, utilizando la numeración decimal de Dewey. 
+	- Ej.: ![[ejemplo_colaboracion1.png]]
+
+#### Diferencias entre el Diagrama de Secuencia y Colaboración
+
+- El Diagrama de Secuencia muestra: 
+	- La sucesión de las interacciones. 
+- Colaboración: 
+	- Destacan el Contexto y la Organización general de los Objetos que interactúan. 
+- El Diagrama de Secuencia: 
+	- Organiza de acuerdo al tiempo. 
+- Colaboración: 
+	- Organiza de acuerdo al espacio. 
+![[ejemplo_colaboracion2.png]]
+
+### Diagrama de Estado
+
+![[vista_diagrama_estado.png]]
+- Muestra el conjunto de estados por los cuales pasa un objeto durante su vida en una aplicación, junto con los cambios que permiten pasar de un estado a otro. 
+- Presenta los Estados que puede encontrarse un Objeto junto con las transiciones entre los estados, y muestro los puntos inicial y final de una secuencia de cambios de estados. 
+- Un Diagrama de Estado también se le conoce como un Motor de Estado. 
+- Un Estado de Acción se puede ver como un caso especial de un estado de actividad.
+- También se conoce como Diagrama de Transición.
+- Es usado para mostrar la vida de una clase determinada a través de todo el sistema, los eventos causan una transición de un estado a otro, y las acciones que resultan del cambio de estado. 
+- Un estado de un objeto es una de las posibles condiciones en las cuales puede existir.
+- Los Elementos de una Estado son: 
+	- **Estado:** Es una condición o situación en la vida de un objeto durante la cual se satisface alguna condición, realiza alguna actividad o espera algún evento. 
+	- **Evento:** Es la especificación de un acontecimiento significativo que ocupa un lugar en el espacio y en el tiempo. 
+	- **Transición:** Es la relación entre dos estados, en la que se indica cómo se pasa de uno a otro.
+	- **Actividad:** Ejecución atómica en curso dentro de una máquina de estado. 
+	- **Acción:** Computación atómica ejecutable que produce un cambio de estado en el modelo o devuelve un valor. 
+		- » Acciones: De entrada, salida y durante la actividad.
+- Ej.: ![[ejemplo_estado.png]]
+### Diagrama de clases
+
+![[vista_diagrama_clases.png]]
+- Un diagrama de clases es un diagrama de estructura estática que describe la estructura de un sistema mostrando las clases del sistema, sus atributos, operaciones (o métodos), y las relaciones entre los objetos. 
+- Ha sido el diagrama más importante en todos los métodos orientados a objetos, porque constituye la guía para convertir el diseño lógico del código. 
+- Es una de las primeras y más usadas herramientas de generación automática de código.
+
+#### Componentes
+
+![[componentes_clases.png]]
+##### Clases
+![[componentes_clase1.png]]
+
+![[componentes_clase2.png]]
+![[ejemplo_clase.png]]
+
+##### Paquetes
+
+- Agrupan lógicamente las clases que tienen alguna relación entre sí. 
+- Se pueden agrupar por clases que conforman módulos y submódulos de la aplicación. 
+- Se pueden agrupar por tipo de funcionalidad. Ej. Paquete con las clases de la lógica del negocio, paquete con las clases de la Interfaz Gráfica de usuario, paquete con las clases que manejan persistencia de datos. 
+- Ej.: 
+![[ejemplo_clases_paquetes.png]]
+
+##### Relaciones
+
+Las clases pueden conectarse con otras clases de diferentes formas, estas conexiones se llaman relaciones. 
+
+**Uso:** Indica invoca que una clase uno o varios métodos que se encuentran con la relaciona.
+![[relacion_uso.png]]
+La clase A usa a la clase B. La clase A invoca uno o varios métodos de la clase B.
+Ejemplo en código java: 
+![[ejemplo_relacion_uso.png]]
+
+**Herencia:**
+La Clase B (subclase o clase derivada) hereda de la Clase A (superclase o clase general) 
+![[relacion_herencia.png]]
+Herencia simple: Una clase hereda sólo de una clase
+![[ejemplo_herencia_simple.png]]
+Herencia Múltiple: Una clase hereda de más de una clase
+![[ejemplo_herencia_multiple.png]]
+
+**Agregación:** Se utiliza para una clase contiene muchos expresar que El * indica la de es objetos de otra clase.
+![[ejemplo_relacion_agregacion.png]]
+En este caso se expresa que la clase A contiene muchos objetos de la clase B.
+El * indica la de es objetos de otra clase En este caso se expresa que la clase A contiene muchos objetos de la clase B multiplicidad la relación, decir, objetos clase cuántos de la B son conocidos por la clase A
+Ejemplos Multiplicidad: 
+1 uno 
+1, 2 uno o dos 
+ 5 cinco 
+ 0..* entre cero y muchos 
+- * entre cero y muchos 
+ 1..* entre 1 y muchos 
+ 5..10 entre cinco y diez
+
+Composición: Es una relación de agregación fuertemente ligada, es decir que por lo menos debe existir un objeto de la clase contenida en la clase contenedora para que exista la relación.
+![[ejemplo_relacion_composicion.png]]
+En el ejemplo: Una menos Carrera Universidad por lo debe tener una para existir
+Su paso a código fuente se maneja de la misma forma que la relación de agregación.
+
+**Asociación:** Cuando los objetos de una clase tienen alguna referencia con objetos de otra clase se utiliza una relación de asociación. Se representa por una línea continua.
+
+![[relacion_asociacion_clases.png]]
+Cada objeto de la Clase A conoce una referencia de la clase B, pero la clase B no conoce a la clase A.
+![[relacion_asociacion_clases2.png]]
+La relación de Asociación debe tener: 
+- Dirección: indica qué clase tiene la referencia a qué clase 
+	-> <- 
+	Si no hay flecha indica que las dos clases se conocen entre sí. 
+- Multiplicidad (el mismo concepto manejado en agregación) 
+- Nombre: sirve para identificar la relación en el diagrama
+
+Ej.: ![[ejemplo_relacion_asociacion.png]]
+Un profesor orienta entre 1 y 3 cursos
+
+#### Ejemplo de diagrama de clases
+![[ejemplo_diagrama_clases.png]]
+
+### Diagrama de Objetos
+
+![[vista_diagrama_objetos.png]]
