Se termino la parte 2 y se empezo la parte 3 de la unidad 3

--- a/4º Año/Metodología de Sistemas II/Unidad 3/2. Diagramas UML.md
+++ b/4º Año/Metodología de Sistemas II/Unidad 3/2. Diagramas UML.md
@@ -304,3 +304,102 @@ Un profesor orienta entre 1 y 3 cursos
 ### Diagrama de Objetos
 
 ![[vista_diagrama_objetos.png]]
+
+Un diagrama de objetos es un gráfico de instancias, incluyendo objetos y datos. Un diagrama de objetos es una instancia de un diagrama de clases; muestra una 'foto' del estado de un sistema en un punto de tiempo determinado. 
+- Se utilizan para validar el modelo del dominio. Para ello es necesario ejecutar los siguientes pasos: 
+	» Elegir uno o más casos de uso que estén altamente relacionados con el modelo del dominio. 
+	» Elegir uno o más escenarios de los casos de uso seleccionados en el punto anterior. Es recomendable elegir escenarios que exploren diferentes situaciones.
+
+- Ir a través de cada escenario en forma separada, y construir los objetos con los datos mencionados en el escenario. 
+- Comparar cada diagrama de objetos con el modelo del dominio para analizar si se han violado algunas restricciones.
+
+#### Ejemplo Sistema Académico
+
+Creando el diagrama de objetos desde el escenario: Juan ingresa su identificación 91558899 la cual el sistema valida. 
+![[ejemplo_diagrama_objetos1.png]]
+De un catálogo de cursos disponibles, Juan selecciona como cursos principales Inglés, Geología, Historia y Algebra. También selecciona Música y Java como materias alternativas. El sistema determina que Juan cumple con los pre-requisitos necesarios y lo agrega a la lista de estudiantes de ese curso. 
+![[ejemplo_diagrama_objetos2.png]]
+El sistema indica que la actividad se ha completado, imprime el horario del estudiante y le envía la información correspondiente al sistema financiero. 
+![[ejemplo_diagrama_objetos3.png]]
+
+### Diagrama de Componentes
+![[vista_diagrama_componentes.png]]
+- Un Componente de Software es una parte física de un Sistema y se encuentra en la Computadora y no en la mente del Analista. 
+- Se puede tomar como Componente: tabla, archivo de datos, html, ejecutable, biblioteca de vínculos dinámicos, documentos, etc. 
+- Los Diagramas de Componentes se utilizan para: 
+	- Los Clientes puedan ver la estructura del Sistema finalizado. 
+	- Los Desarrolladores cuenten con una estructura con la cual trabajar en adelante. 
+	- Quienes escriban las notas técnicas y la documentación puedan entender lo que escriben.
+- Los Diagramas de Componentes se utilizan para: 
+	- Modelar Código Fuentes. 
+	- Modelar Versiones Ejecutables. 
+	- Modelar Base de Datos Físicas. 
+	- Modelar Sistemas Adaptables. 
+- Los componentes representan todos los tipos de elementos software que entran en la Fabricación de aplicaciones informáticas. 
+- Muestra la organización y las dependencias entre un conjunto de Componentes. 
+- Cubren la vista de la Implementación Estática y se relacionan con los Diagramas de Clases ya que en un Componente suele tener una o mas Clases, interfaces o Colaboraciones. 
+- Cuando se habla del Diagrama de Componentes, se trata obviamente de Componentes, Interfaces y Relaciones. 
+![[ejemplo_diagrama_componente.png]]
+
+#### Componentes y Clases
+
+Los componentes son elementos físicos del mundo real. Un componente es la implementación física de un conjunto de otros elementos lógicos, como clases y colaboraciones.
+![[componente.png]]
+UML definen cinco Estereotipos estándar que se aplican a los Componentes: 
+- Ejecutable: Especifica un componente que se puede ejecutar en un Nodo. 
+- Librería: Especifica una biblioteca de Objetos Estática o Dinámica. 
+- Tabla: Especifica un Componente que representa una tabla de una Base de Datos. 
+- Archivo: Especifica un Componente que representa una Archivo de Código Fuente o Archivo de Datos. 
+- Documento: Especifica un Componente que representa un documento. 
+
+#### Dependencias entre Componentes
+
+La dependencia entre dos componentes se muestra como una flecha punteada. La dependencia quiere decir que una componente necesita de la otra para completar su definición, es decir, Servicios ofrecidos por otro Componente.
+![[dependencia_componentes.png]]
+
+#### Sub sistemas
+- Los distintos componentes pueden agruparse en paquetes según un criterio lógico y con vistas a simplificar la implementación.
+- Son paquetes estereotipados en (subsistemas) para incorporar la noción de biblioteca de compilación. 
+![[paquetes_componentes.png]]
+
+#### Ejemplo de diagrama de componentes
+![[ejemplo_componentes.png]]
+
+### Diagrama de Despliegue o Distribución
+
+![[vista_diagrama_distribucion.png]]
+- Los Diagramas de Despliegue o Distribución muestran la disposición física de los distintos nodos que componen un sistema y el reparto de los componentes sobre dichos nodos. 
+- Los Diagramas de Despliegue o Distribución modelan la topología del hardware sobre el que se ejecuta el Sistema Software. 
+- Este tipo de diagramas suele utilizarse para modelar Sistemas Distribuidos o Sistemas Empotrados. En los sistemas monolíticos, generalmente, resultan innecesarios. 
+- Representa los Dispositivos y Equipos, mostrar sus interconexiones y el Software que se encuentra en cada maquina. 
+- Modela la distribución en tiempo de ejecución de los elementos de procesamiento y componentes de software, junto a los procesos y objetos asociados. 
+- Un nodo es un recurso de ejecución, representa un recurso de ejecución tal como: 
+	- Dispositivos 
+	- Procesadores 
+	- Memoria 
+	- Sistema Operativos 
+	- Bases de Datos 
+- Un Nodo es un elemento físico, que existe en tiempo de ejecución y representa un recurso computacional que generalmente tiene alguna memoria y, a menudo, capacidad de procesamiento. 
+- Cada nodo puede contener instancias de componentes. 
+- Los nodos se interconectan mediante soportes bidireccionales que pueden a su vez estereotiparse. 
+- Esta vista permite determinar las consecuencias de la distribución y la asignación de recursos.
+- Ej.: ![[ejemplo_distribucion.png]]
+
+### Conclusión
+- El UML es un lenguaje reconocido mundialmente por la industria de construcción de software. 
+- El Modelamiento visual es una de las técnicas probadas que brinda mejores resultados. 
+- Todos los sistemas tienen una estructura estática y comportamiento dinámico. 
+- La estructura se describe con los diagramas de clases, componentes y despliegue. 
+- El comportamiento dinámico del sistema se describe con diagramas de estados, secuencias, colaboración y actividades. 
+- UML define una notación que se expresa como diagramas sirven para representar modelos/subsistemas o partes de ellos. 
+- El 80% de la mayoría de los problemas pueden modelarse usando alrededor del 20% de UML.
+
+### Resumen
+
+- **Diagrama Caso de Uso:** Análisis de requerimientos. 
+- **Diagrama de Actividades:** Tomar cada Caso de Uso y realizar la descripción de las actividades. 
+- **Diagrama de Secuencias:** Tomar cada objeto y mostrar como se comunican a través del tiempo. 
+- **Diagrama de Colaboración:** Tomar cada objeto y mostrar como interactúan entre ellos. 
+- **Diagrama de Estados:** Tomar cada objeto y mostrar los cambios de estados en el transcurso de una aplicación. 
+- **Diagrama de Clases:** Mostrar las clases del sistema, sus atributos, operaciones (o métodos), y las relaciones entre los objetos. 
+- **Diagramas de Objetos:** Realizar una instancia de un diagrama de clases; es decir una 'foto' del estado del sistema en un punto de tiempo determinado.
