Se continuo con la parte 3 de la unidad 3

--- a/4º Año/Metodología de Sistemas II/Unidad 3/3. RUP (Proceso Unificado Racional).md
+++ b/4º Año/Metodología de Sistemas II/Unidad 3/3. RUP (Proceso Unificado Racional).md
@@ -45,3 +45,105 @@ Un ejemplo llevado a la realidad sería:
 	Ir a la verdulería. 
 **… Esto sería el proceso (RUP)**
 
+Por otro lado, el modelado sería:
+	1° - Listado de frutas a comprar. 
+	2° - Mapa con el camino mas rápido. 
+
+Entonces … 
+¿Qué son los modelos? Son escritos que se utilizan para poder llevar a cabo en forma eficiente el proceso. 
+
+### Dimensiones del RUP
+
+El RUP tiene dos dimensiones: 
+El eje horizontal representa tiempo y demuestra los aspectos del ciclo de vida del proceso (aspecto dinámico). 
+El eje vertical representa las disciplinas, que agrupan actividades definidas lógicamente por la naturaleza (aspecto estático). 
+![[dimensiones_RUP.png]]
+
+En la figura se puede observar como varía el énfasis de cada disciplina en un cierto plazo en el tiempo, y durante cada una de las fases. Por ejemplo, en iteraciones tempranas, pasamos más tiempo en requerimientos, y en las últimas iteraciones pasamos más tiempo en poner en práctica la realización del proyecto en si. 
+![[flujos_trabajo_RUP1.png]]
+![[flujos_trabajo_RUP2.png]]
+
+### Características de RUP
+
+En cuanto a la perspectiva práctica, se recomiendan seis buenas prácticas aconsejables en el desarrollo de sistemas: 
+**1.- Desarrollar el software de forma iterativa.** 
+	Planificar incrementos del sistema basándose en las prioridades del usuario y desarrollo. Entregar las características del sistema que tengan la más alta prioridad al inicio del proceso de desarrollo. 
+**2.- Gestionar los requerimientos.** 
+	Documentar explícitamente los requerimientos del cliente y mantenerse al tanto de los cambios en estos requerimientos. Analizar el impacto de los cambios en el sistema antes de aceptarlos. 
+**3.- Utilizar arquitecturas basadas en componentes.** 
+	Estructurar la arquitectura del sistema en componentes reutilizables en la mayor medida posible. 
+**4.- Modelar el software visiblemente.** 
+	Utilizar modelos gráficos UML para presentar vistas estáticas y dinámicas del software. 
+**5.- Verificar la calidad del software.** 
+	Asegurar que el software cumple con los estándares de calidad de la organización. 
+**6.-Controlar los cambios del software.** 
+	Gestionar los cambios del software usando un sistema de gestión de cambios y procedimientos, también herramientas de gestión de configuraciones. 
+
+**Artefactos y Roles:**
+- Artefactos : son los productos tangibles del proceso como por ejemplo, el modelo de casos de uso, el código fuente, etc.
+- Roles : papel que desempeña una persona en un determinado momento, una persona puede desempeñar distintos roles a lo largo del proceso.
+
+El RUP presenta 3 características esenciales de todo el proceso de desarrollo:
+1. Dirigido por los casos de uso. 
+	Los casos de uso es una técnica que se utiliza para la captura de requisitos por parte de los clientes/usuarios, se define un caso de uso como un fragmento de funcionalidad del sistema que proporciona al usuario un valor añadido.![[caso_uso_RUP.png]]
+2. Centrado en la arquitectura.
+	La arquitectura involucra los aspectos estáticos y dinámicos más significativos del sistema, está muy relacionada con la toma de decisiones de cómo debe ser desarrollado el sistema y que orden debe seguirse para tal fin. La arquitectura se ve influenciada por la plataforma software, sistema operativo, gestor de bases de datos, protocolos, consideraciones de desarrollo como sistemas heredados. Muchas de estas restricciones constituyen requisitos no funcionales del sistema. 
+3. Ciclo de vida iterativo e incremental.
+	La apuesta de RUP es dividir trabajo en partes pequeñas o mini proyectos. Permitiendo que el equilibrio entre Casos de Uso y arquitectura se vaya logrando durante cada mini proyecto, así durante todo el proceso de desarrollo.
+	Cada mini proyecto es una iteración ![[ciclo_vida_RUP1.png]]
+	Cada ciclo está compuesto por fases y cada una de estas fases está compuesta por un número de iteraciones. ![[ciclo_vida_RUP2.png]]
+
+
+Cada paso con las cuatro fases produce una generación del software. A menos que el producto "muera", se desarrollará nuevamente repitiendo la misma secuencia las fases de iniciación, elaboración, construcción y transición, pero con diversos énfasis cada fase.
+
+**Fases:**
+	1.- Inicio.
+	2.- Elaboración. 
+	3.- Construcción. 
+	4.- Transición.
+
+**Disciplinas:**
+	1. Modelado de negocio. 
+	2. Requerimientos. 
+	3. Análisis y diseño. 
+	4. Implementación. 
+	5. Pruebas. 
+	6. Puesta en producción. 
+	7. Configuración y administración de cambios. 
+	8. Administración del proyecto. 
+	9. Ambiente.
+
+![[dimensiones_RUP.png]]
+
+#### Fase de inicio
+
+- Visión: se define el ámbito y objetivos del proyecto. 
+- Especificación de Requerimientos : se define la funcionalidad y capacidades del producto. 
+#### Fase de elaboración
+
+- Tanto la funcionalidad como el dominio del problema se estudian en profundidad. 
+- Se define una arquitectura básica. 
+- Se planifica el proyecto considerando recursos disponibles.
+- Diagramas de caso de uso.
+
+#### Fase de Construcción
+
+El producto se desarrolla a través de iteraciones donde cada iteración involucra tareas de análisis, diseño e implementación. Las fases de inicio y elaboración sólo dieron una arquitectura básica que es aquí refinada de manera incremental conforme se construye (se permiten cambios en la estructura). Gran parte del trabajo es programación y pruebas. Se documenta tanto el sistema construido como el manejo del mismo. 
+Esta fase proporciona un producto construido junto con la documentación.
+
+Documento Arquitectura que trabaja con las siguientes vistas: 
+
+**Vista Lógica** 
+	• Diagrama de clases 
+	• Modelo E-R (Si el sistema así lo requiere) 
+
+**Vista de Implementación** 
+	• Diagrama de Secuencia 
+	• Diagrama de Estados 
+	• Diagrama de Colaboración 
+
+**Vista Conceptual** 
+	• Modelo de dominio 
+
+**Vista Física** 
+	• Mapa de comportamiento a nivel de hardware. 
