Se termino la unidad 3 y se crearon las carpetas de las unidades 4 hasta la 6

--- a/4º Año/Metodología de Sistemas II/Unidad 3/3. RUP (Proceso Unificado Racional).md
+++ b/4º Año/Metodología de Sistemas II/Unidad 3/3. RUP (Proceso Unificado Racional).md
@@ -147,3 +147,121 @@ Documento Arquitectura que trabaja con las siguientes vistas:
 
 **Vista Física** 
 	• Mapa de comportamiento a nivel de hardware. 
+
+#### Fase de Transición
+
+Se libera el producto y se entrega al usuario para un uso real. Se incluyen tareas de marketing, empaquetado atractivo, instalación, configuración, entrenamiento, soporte, mantenimiento, etc. 
+Los manuales de usuario se completan y refinan con la información anterior, estas tareas se realizan también en iteraciones. 
+
+#### Disciplina: Modelado del negocio
+
+Objetivos: 
+	• Comprender la estructura y la dinámica de la organización. 
+	• Comprender problemas actuales e identificar posibles mejoras. 
+	• Comprender los procesos de negocio.
+
+#### Disciplina: Requerimientos
+
+Objetivos: 
+	• Establecer lo que el sistema debe hacer (Especificar Requisitos) 
+	• Definir los límites del sistema, y una interfaz de usuario. 
+	• Realizar una estimación del costo y tiempo de desarrollo.
+
+#### Disciplina: Análisis y Diseño
+
+Esta disciplina define la arquitectura del sistema y tiene como objetivos trasladar requisitos en especificaciones de implementación. 
+
+#### Disciplina: Implementación
+
+Objetivos: 
+	• Implementar las clases de diseño como componentes (ej. fichero fuente). 
+	• Asignar los componentes a los nodos. 
+	• Probar los componentes individualmente. 
+	• Integrar los componentes en un sistema ejecutable (enfoque incremental).
+
+#### Disciplina: Pruebas
+
+Objetivos: 
+	• Verificar la integración de los componentes (prueba de integración).
+	• Verificar que todos los requisitos han sido implementados (pruebas del sistema). 
+	• Asegurar que los defectos detectados han sido resueltos antes de la distribución. 
+
+#### Disciplina: Puesta en Producción
+
+Objetivos: 
+	• Asegurar que el producto está preparado para el cliente, proceder a su entrega y recepción por el cliente. 
+	• Probar el software en su entorno final (Prueba Beta), empaquetarlo, distribuirlo e instalarlo, así como la tarea de enseñar al usuario.
+
+#### Disciplina: Gestión y configuración de cambios
+
+Se debe tener en cuenta los siguientes problemas:
+
+**Actualización simultánea:** Es la actualización de algo elaborado con anterioridad, sin saber que alguien más lo está actualizando. 
+
+**Notificación limitada:** Al realizar alguna modificación, no se deja información sobre lo que se hizo, por lo tanto no se sabe quién, como, y cuando se hizo. 
+
+**Versiones múltiples:** No saber con exactitud, cual es la última versión, y al final no se tiene un orden sobre que modificaciones se han realizado a las diversas versiones.
+
+#### Disciplina: Gestión del Proyecto
+
+Objetivos: 
+	• Equilibrar los objetivos competitivos. 
+	• Administrar el riesgo, y superar restricciones para entregar un producto que satisface las necesidades de ambos clientes con éxito (los que pagan el dinero) y los usuarios.
+
+#### Disciplina: Entorno
+
+Su propósito es proveer a la organización que desarrollará el software, un ambiente en el cual basarse, el cual provee procesos y herramientas para poder desarrollar el software. 
+
+### Ejemplo
+
+Pedir una pizza a domicilio para enfatizar la implementación de RUP
+
+#### Fase de Inicio
+
+En esta fase se especifican los requerimientos, se definen los casos de negocio y se empieza a describir el alcance actores primarios que interactuaran con el software y factores críticos de la entrega del proyecto.
+
+Al pedir una pizza el cliente llama al operador y realiza una orden esto sería el requerimiento (quiere una pizza de peperoni).
+
+#### Fase de Elaboración
+
+En esta fase se analiza el dominio del diseño de la aplicación y establecer las fases de la arquitectura del software es la más importante en la entrega de un proyecto y una de la de más alto riesgo por lo critico de la toma de decisiones de la arquitectura del diseño. 
+
+Una vez recibida la orden el chef piensa los ingredientes que utilizará y como la va a cocinar en el horno y a cuantos grados de temperatura. 
+
+#### Fase de Construcción
+
+Se compone de cada desarrollo de la aplicación
+
+El Chef sigue los pasos previamente establecidos une todos los ingredientes y cocina la pizza. 
+
+#### Fase de Transición
+
+Se centran la actividades requeridas para colocar el software en las manos de los usuarios finales incluye varias iteracciones de archivos beta y corrección de errores y mejoras.
+
+El producto es empaquetado y llevado a su destino para ser entregado al cliente. 
+
+#### Fase de Evolución
+
+Son actividades asociadas con implementación de nuevas versiones de un producto mas maduro. 
+Cada ciclo de evolución lleva las fases:
+- Iniciación 
+- Elaboración 
+- Construcción 
+- Transición
+
+La pizzería para estar siempre actualizada evalúa sus estadísticas y se da cuenta de que la pizza de queso es la más pedida y decide incluir una pizza doble queso, introduce un nuevo requerimiento y se vuelven a seguir todos los pasos para obtener el nuevo producto. 
+
+#### Ventajas
+
+- RUP ha madurado con el tiempo: el uso. 
+- UML hace que el software se apegue a estándares de la industria. 
+- Adaptable a la organización. 
+- Herramientas de buena implementación. 
+- Define actividades, roles y responsabilidades desde jefe de proyecto hasta los analistas, desarrolladores y equipos de prueba.
+
+### Desventajas
+
+- Pretende prever y tener todo el control de antemano. 
+- Modelo genera trabajo adicional. 
+- Genera muchos costos.
+- No recomendable para proyectos pequeños.
